# python-package-template

./: README.md  makefile  pyproject.toml  requirements.txt
tests/unit/: test_automodel.py
